fix: links-overflow x

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
 }
 html{
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 a, li{
   list-style-type: none;
